feat: capture widget and share

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,6 +10,7 @@
     "instruct": "Concentrate on a question and tap the book",
     "answerScreen": "The answer given to your question is:",
     "getOtherAnswer": "Get Other Answer",
+    "shareAnswer": "Share This Answer",
 
     "menuHowToUse": "How to use",
     "menuAbout": "About",
