--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -4,6 +4,7 @@
     "instruct": "Suy nghĩ về câu hỏi trong đầu và nhấn vào cuốn sách",
     "answerScreen": "Câu trả lời cho thắc mắc của bạn là: ",
     "getOtherAnswer": "Muốn câu trả lời khác?",
+    "shareAnswer": "Chia sẻ câu trả lời này",
 
     "menuHowToUse": "Cách sử dụng",
     "menuAbout": "Giới thiệu",
