--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -6,6 +6,11 @@
     "getOtherAnswer": "Muốn câu trả lời khác?",
     "shareAnswer": "Chia sẻ câu trả lời này",
 
+    "feedbackSubject": "[Góp ý] Vị thần của những Quyết Định",
+
+    "languageEn": "Tiếng Anh",
+    "languageVi": "Tiếng Việt",
+
     "menuHowToUse": "Cách sử dụng",
     "menuAbout": "Giới thiệu",
     "menuHistory": "Câu trả lời trước đó",
